--- a/applications-and-dashboards/vtt-transcription-app/index.html
+++ b/applications-and-dashboards/vtt-transcription-app/index.html
@@ -593,7 +593,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/pablobernabeu/VTT-Transcription-App" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/pablobernabeu/VTT-Transcription-App/blob/main/index.Rmd" target="_blank" rel="noopener">
   Code
 </a>
 
@@ -660,7 +660,7 @@
 <div id="globe_with_meridians-the-web-application-can-be-launched-here." class="section level2">
 <h2>🌐  The web application can be <a href="https://pablo-bernabeu.shinyapps.io/VTT-Transcription-App/">launched here</a>.</h2>
 <p>The data is only available to the user, and is deleted when the website is closed.</p>
-<p>Questions and suggestions can be submitted as <a href="https://github.com/pablobernabeu/VTT-transcription/issues">issues</a> or emailed to <a href="mailto:p.bernabeu@lancaster.ac.uk" class="email">p.bernabeu@lancaster.ac.uk</a>. The app can be extended via pull requests.</p>
+<p>Questions and suggestions can be submitted as <a href="https://github.com/pablobernabeu/VTT-transcription/issues">issues</a> or emailed to <a href="mailto:pcbernabeu@gmail.com" class="email">pcbernabeu@gmail.com</a>. The app can be extended via pull requests.</p>
 <p>Developer: Pablo Bernabeu (Dept. Psychology, Lancaster University). Licence: <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p>
 </div>
 <div id="code-details" class="section level2">
@@ -741,7 +741,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://pablobernabeu.github.io/">Pablo Bernabeu</a></h5>
       <h6 class="card-subtitle">Postdoctoral fellow at UiT &ndash; <br>The Arctic University of Norway</h6>
-      <p class="card-text">After doing a research master's, I became a PhD student and graduate teaching assistant in Psychology at Lancaster University, where I investigated how conceptual processing&mdash;that is, the comprehension of the meaning of words&mdash;is supported by linguistic and sensorimotor brain systems, and how research on this topic is influenced by methodological aspects such as the operationalisation of variables and the sample size of experiments. Currently, I am a postdoctoral fellow at UiT The Arctic University of Norway, where I am investigating the behavioural and neural underpinnings of multilingualism. Throughout my research, I have used methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics and programming. My CV is available at <a href="https://osf.io/84ktq">https://osf.io/84ktq</a>.</p>
+      <p class="card-text">After doing a research master's, I became a PhD student and graduate teaching assistant in Psychology at Lancaster University, where I investigated how conceptual processing&mdash;that is, the comprehension of the meaning of words&mdash;is supported by linguistic and sensorimotor brain systems, and how research on this topic is influenced by methodological aspects such as the operationalisation of variables and the sample size of experiments. Currently, I am a postdoctoral fellow at UiT The Arctic University of Norway, where I am investigating the behavioural and neural underpinnings of multilingualism. Throughout my research, I have used methods such as behavioural and electroencephalographic experiments, corpus analysis, statistics and programming. Research materials at <a href="https://osf.io/25u3x">https://osf.io/25u3x</a>. CV <a href="/cv.html">available here</a>.</p>
       <ul class="network-icon" aria-hidden="true">
   
 </ul>
