--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; 
     
     <a href='https://osf.io/download/84ktq'>
-      <button style = 'margin-top: 30px; background-color: white; color: black; border: 2px solid green; border-radius: 12px;'>
+      <button style = 'margin-top: 10px; background-color: white; color: black; border: 2px solid green; border-radius: 12px;'>
         <p style = 'margin-top: 10px; margin-left: 35px; margin-bottom: 10px; margin-right: 35px; font-size: 170%;'>
       Click to download
       </p></button>
@@ -24,13 +24,13 @@
 
 <br>
 
-<div style='text-align: center; height: 90vh;'>
-<iframe src='https://mfr.osf.io/render?url=https://osf.io/download/84ktq/?direct%26mode=render'
-    width='90%'
-    scrolling='yes'
-    height='100%'
-    marginheight='0'
-    frameborder='0'
+<div style = 'text-align: center; height: 5500px;'>
+<iframe src = 'https://mfr.osf.io/render?url=https://osf.io/download/84ktq/?direct%26mode=render'
+    width = '90%'
+    scrolling = 'yes'
+    height = '100%'
+    marginheight = '0'
+    frameborder = '0'
     allowfullscreen
     webkitallowfullscreen
 >
