--- a/index.html
+++ b/index.html
@@ -3287,7 +3287,7 @@
             <div class="description" style="padding-left:14px;">
               <p class="course" style="color:#515151"><a href="https://www.research.lancs.ac.uk/portal/en/people/pablo-de-juan-bernabeu(5add90d6-f60f-4a88-91fc-b2e756579109).html">PhD Psychology with graduate teaching scholarship</a>, <strong>2018&ndash;2022</strong></p>
               <p class="institution" style="color:#5B5B5B">Lancaster University (United Kingdom)</p>
-              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognitive Science, Psychological Science Accelerator; internship facilitation; development of website for open science group in my department (&lsquo;Prospr&rsquo;).</p>
+              <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  Service: peer-review for Cognitive Science and for Psychological Science Accelerator; development of website for open science group in my department (&lsquo;Prospr&rsquo;).</p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;">-  <a href="https://www.research.lancs.ac.uk/portal/en/people/pablo-de-juan-bernabeu(5add90d6-f60f-4a88-91fc-b2e756579109)/activities.html">Activities</a></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
               <p class="institution" style="max-width: 550px; padding-left:8px; text-indent:-0.8em; margin-left:1em;"></p>
