--- a/thesis/references.html
+++ b/thesis/references.html
@@ -385,19 +385,19 @@ Barca, L., Mazzuca, C., &amp; Borghi, A. (2020). Overusing the pacifier during i
 Barr, D. J., Levy, R., Scheepers, C., &amp; Tily, H. J. (2013). Random effects structure for confirmatory hypothesis testing: <span>Keep</span> it maximal. <em>Journal of Memory and Language</em>, <em>68</em>(3), 255–278. <a href="https://doi.org/10.1016/j.jml.2012.11.001">https://doi.org/10.1016/j.jml.2012.11.001</a>
 </div>
 <div class="csl-entry">
-Barsalou, L. W. (2016). On staying grounded and avoiding quixotic dead ends. <em>Psychonomic Bulletin &amp; Review</em>, <em>23</em>(4), 1122–1142. <a href="https://doi.org/10.3758/s13423-016-1028-3">https://doi.org/10.3758/s13423-016-1028-3</a>
+Barsalou, L. W. (1999a). Perceptual symbol systems. <em>Behavioral and Brain Sciences</em>, <em>22</em>(4), 577–660. <a href="https://doi.org/10.1017/S0140525X99002149">https://doi.org/10.1017/S0140525X99002149</a>
+</div>
+<div class="csl-entry">
+Barsalou, L. W. (1999b). Perceptual symbol systems. <em>Behavioral and Brain Sciences</em>, <em>22</em>, 577–660. <a href="https://doi.org/10.1017/S0140525X99002149">https://doi.org/10.1017/S0140525X99002149</a>
 </div>
 <div class="csl-entry">
 Barsalou, L. W. (2003). Situated simulation in the human conceptual system. <em>Language and Cognitive Processes</em>, <em>18</em>(5-6), 513–562. <a href="https://doi.org/10.1080/01690960344000026">https://doi.org/10.1080/01690960344000026</a>
 </div>
 <div class="csl-entry">
+Barsalou, L. W. (2016). On staying grounded and avoiding quixotic dead ends. <em>Psychonomic Bulletin &amp; Review</em>, <em>23</em>(4), 1122–1142. <a href="https://doi.org/10.3758/s13423-016-1028-3">https://doi.org/10.3758/s13423-016-1028-3</a>
+</div>
+<div class="csl-entry">
 Barsalou, L. W. (2019). Establishing generalizable mechanisms. <em>Psychological Inquiry</em>, <em>30</em>(4), 220–230. <a href="https://doi.org/10.1080/1047840X.2019.1693857">https://doi.org/10.1080/1047840X.2019.1693857</a>
-</div>
-<div class="csl-entry">
-Barsalou, L. W. (1999a). Perceptual symbol systems. <em>Behavioral and Brain Sciences</em>, <em>22</em>(4), 577–660. <a href="https://doi.org/10.1017/S0140525X99002149">https://doi.org/10.1017/S0140525X99002149</a>
-</div>
-<div class="csl-entry">
-Barsalou, L. W. (1999b). Perceptual symbol systems. <em>Behavioral and Brain Sciences</em>, <em>22</em>, 577–660. <a href="https://doi.org/10.1017/S0140525X99002149">https://doi.org/10.1017/S0140525X99002149</a>
 </div>
 <div class="csl-entry">
 Barsalou, L. W., Santos, A., Simmons, W. K., &amp; Wilson, C. D. (2008). Language and simulation in conceptual processing. In <em>Symbols and <span>Embodiment</span></em>. <span>Oxford University Press</span>. <a href="https://doi.org/10.1093/acprof:oso/9780199217274.003.0013">https://doi.org/10.1093/acprof:oso/9780199217274.003.0013</a>
@@ -418,10 +418,10 @@ Becker, S., Moscovitch, M., Behrmann, M., &amp; Joordens, S. (1997). Long-term s
 Beilock, S. L., Lyons, I. M., Mattarella-Micke, A., Nusbaum, H. C., &amp; Small, S. L. (2008). Sports experience changes the neural processing of action language. <em>Proceedings of the National Academy of Sciences</em>, <em>105</em>(36), 13269–13273. <a href="https://doi.org/10.1073/pnas.0803424105">https://doi.org/10.1073/pnas.0803424105</a>
 </div>
 <div class="csl-entry">
-Bernabeu, P. (2018). <em>Dutch modality exclusivity norms for 336 properties and 411 concepts</em>. <span>PsyArXiv</span>. <a href="https://doi.org/10.31234/osf.io/s2c5h">https://doi.org/10.31234/osf.io/s2c5h</a>
+Bernabeu, P. (2017). <em>Modality switches occur early and extend late in conceptual processing: Evidence from ERPs</em>. <span>PsyArXiv</span>. <a href="https://doi.org/10.31234/osf.io/5gjvk">https://doi.org/10.31234/osf.io/5gjvk</a>
 </div>
 <div class="csl-entry">
-Bernabeu, P. (2017). <em>Modality switches occur early and extend late in conceptual processing: Evidence from ERPs</em>. <span>PsyArXiv</span>. <a href="https://doi.org/10.31234/osf.io/5gjvk">https://doi.org/10.31234/osf.io/5gjvk</a>
+Bernabeu, P. (2018). <em>Dutch modality exclusivity norms for 336 properties and 411 concepts</em>. <span>PsyArXiv</span>. <a href="https://doi.org/10.31234/osf.io/s2c5h">https://doi.org/10.31234/osf.io/s2c5h</a>
 </div>
 <div class="csl-entry">
 Bernabeu, P., Lynott, D., &amp; Connell, L. (2021). <em>Preregistration: <span>The</span> interplay between linguistic and embodied systems in conceptual processing</em>. <span>OSF</span>. <a href="https://osf.io/ftydw">https://osf.io/ftydw</a>
@@ -667,10 +667,10 @@ Gilbert, D. T., King, G., Pettigrew, S., &amp; Wilson, T. D. (2016). Comment on 
 Green, P., &amp; MacLeod, C. J. (2016). <span>SIMR</span>: <span>An R</span> package for power analysis of generalized linear mixed models by simulation. <em>Methods in Ecology and Evolution</em>, <em>7</em>(4), 493–498. <a href="https://doi.org/10.1111/2041-210X.12504">https://doi.org/10.1111/2041-210X.12504</a>
 </div>
 <div class="csl-entry">
-Günther, F., Dudschig, C., &amp; Kaup, B. (2016a). Latent semantic analysis cosines as a cognitive similarity measure: <span>Evidence</span> from priming studies. <em>Quarterly Journal of Experimental Psychology</em>, <em>69</em>(4), 626–653. <a href="https://doi.org/10.1080/17470218.2015.1038280">https://doi.org/10.1080/17470218.2015.1038280</a>
+Günther, F., Dudschig, C., &amp; Kaup, B. (2015). LSAfun: An r package for computations based on latent semantic analysis. <em>Behavior Research Methods</em>, <em>47</em>(4), 930–944. <a href="https://doi.org/10.3758/s13428-014-0529-0">https://doi.org/10.3758/s13428-014-0529-0</a>
 </div>
 <div class="csl-entry">
-Günther, F., Dudschig, C., &amp; Kaup, B. (2015). LSAfun: An r package for computations based on latent semantic analysis. <em>Behavior Research Methods</em>, <em>47</em>(4), 930–944. <a href="https://doi.org/10.3758/s13428-014-0529-0">https://doi.org/10.3758/s13428-014-0529-0</a>
+Günther, F., Dudschig, C., &amp; Kaup, B. (2016a). Latent semantic analysis cosines as a cognitive similarity measure: <span>Evidence</span> from priming studies. <em>Quarterly Journal of Experimental Psychology</em>, <em>69</em>(4), 626–653. <a href="https://doi.org/10.1080/17470218.2015.1038280">https://doi.org/10.1080/17470218.2015.1038280</a>
 </div>
 <div class="csl-entry">
 Günther, F., Dudschig, C., &amp; Kaup, B. (2016b). Predicting lexical priming effects from distributional semantic similarities: <span>A</span> replication with extension. <em>Frontiers in Psychology</em>, <em>7</em>, 1646. <a href="https://doi.org/10.3389/fpsyg.2016.01646">https://doi.org/10.3389/fpsyg.2016.01646</a>
@@ -1033,19 +1033,19 @@ Plaut, D. C., &amp; Booth, J. R. (2000). Individual and developmental difference
 Ponari, M., Norbury, C. F., Rotaru, A., Lenci, A., &amp; Vigliocco, G. (2018). Learning abstract words and concepts: <span>Insights</span> from developmental language disorder. <em>Philosophical Transactions of the Royal Society B: Biological Sciences</em>, <em>373</em>, 20170140. <a href="https://doi.org/10.1098/rstb.2017.0140">https://doi.org/10.1098/rstb.2017.0140</a>
 </div>
 <div class="csl-entry">
-Ponari, M., Norbury, C. F., &amp; Vigliocco, G. (2020). The role of emotional valence in learning novel abstract concepts. <em>Developmental Psychology</em>, <em>56</em>(10), 1855–1865. <a href="https://doi.org/10.1037/dev0001091">https://doi.org/10.1037/dev0001091</a>
+Ponari, M., Norbury, C. F., &amp; Vigliocco, G. (2018). Acquisition of abstract concepts is influenced by emotional valence. <em>Developmental Science</em>, <em>21</em>(2), 12549. <a href="https://doi.org/10.1111/desc.12549">https://doi.org/10.1111/desc.12549</a>
 </div>
 <div class="csl-entry">
-Ponari, M., Norbury, C. F., &amp; Vigliocco, G. (2018). Acquisition of abstract concepts is influenced by emotional valence. <em>Developmental Science</em>, <em>21</em>(2), 12549. <a href="https://doi.org/10.1111/desc.12549">https://doi.org/10.1111/desc.12549</a>
+Ponari, M., Norbury, C. F., &amp; Vigliocco, G. (2020). The role of emotional valence in learning novel abstract concepts. <em>Developmental Psychology</em>, <em>56</em>(10), 1855–1865. <a href="https://doi.org/10.1037/dev0001091">https://doi.org/10.1037/dev0001091</a>
 </div>
 <div class="csl-entry">
 Pregla, D., Lissón, P., Vasishth, S., Burchert, F., &amp; Stadie, N. (2021). Variability in sentence comprehension in aphasia in <span>German</span>. <em>Brain and Language</em>, <em>222</em>, 105008. <a href="https://doi.org/10.1016/j.bandl.2021.105008">https://doi.org/10.1016/j.bandl.2021.105008</a>
 </div>
 <div class="csl-entry">
-Pulvermüller, F. (2013). How neurons make meaning: <span>Brain</span> mechanisms for embodied and abstract-symbolic semantics. <em>Trends in Cognitive Sciences</em>, <em>17</em>(9), 458–470. <a href="https://doi.org/10.1016/j.tics.2013.06.004">https://doi.org/10.1016/j.tics.2013.06.004</a>
+Pulvermüller, F. (1999). Words in the brain’s language. <em>Behavioral and Brain Sciences</em>, <em>22</em>, 253–336. <a href="https://doi.org/10.1017/S0140525X9900182X">https://doi.org/10.1017/S0140525X9900182X</a>
 </div>
 <div class="csl-entry">
-Pulvermüller, F. (1999). Words in the brain’s language. <em>Behavioral and Brain Sciences</em>, <em>22</em>, 253–336. <a href="https://doi.org/10.1017/S0140525X9900182X">https://doi.org/10.1017/S0140525X9900182X</a>
+Pulvermüller, F. (2013). How neurons make meaning: <span>Brain</span> mechanisms for embodied and abstract-symbolic semantics. <em>Trends in Cognitive Sciences</em>, <em>17</em>(9), 458–470. <a href="https://doi.org/10.1016/j.tics.2013.06.004">https://doi.org/10.1016/j.tics.2013.06.004</a>
 </div>
 <div class="csl-entry">
 Pylyshyn, Z. W. (1973). What the mind’s eye tells the mind’s brain: <span>A</span> critique of mental imagery. <em>Psychological Bulletin</em>, <em>80</em>(1), 1–24. <a href="https://doi.org/10.1037/h0034650">https://doi.org/10.1037/h0034650</a>
@@ -1282,10 +1282,10 @@ Willems, R. M., &amp; Casasanto, D. (2011). Flexibility in <span>Embodied Langua
 Williams, L. E. (2014). Improving psychological science requires theory, data, and caution: <span>Reflections</span> on <span>Lynott</span> et al. (2014). <em>Social Psychology</em>, <em>45</em>(4), 321–323.
 </div>
 <div class="csl-entry">
-Wingfield, C., &amp; Connell, L. (2022a). Understanding the role of linguistic distributional knowledge in cognition. <em>Language, Cognition and Neuroscience</em>, 1–51. <a href="https://doi.org/10.1080/23273798.2022.2069278">https://doi.org/10.1080/23273798.2022.2069278</a>
+Wingfield, C., &amp; Connell, L. (2022a). Sensorimotor distance: <span>A</span> grounded measure of semantic similarity for 800 million concept pairs. <em>Behavior Research Methods</em>. <a href="https://doi.org/10.3758/s13428-022-01965-7">https://doi.org/10.3758/s13428-022-01965-7</a>
 </div>
 <div class="csl-entry">
-Wingfield, C., &amp; Connell, L. (2022b). Sensorimotor distance: <span>A</span> grounded measure of semantic similarity for 800 million concept pairs. <em>Behavior Research Methods</em>. <a href="https://doi.org/10.3758/s13428-022-01965-7">https://doi.org/10.3758/s13428-022-01965-7</a>
+Wingfield, C., &amp; Connell, L. (2022b). Understanding the role of linguistic distributional knowledge in cognition. <em>Language, Cognition and Neuroscience</em>, 1–51. <a href="https://doi.org/10.1080/23273798.2022.2069278">https://doi.org/10.1080/23273798.2022.2069278</a>
 </div>
 <div class="csl-entry">
 Winter, B., Perlman, M., &amp; Majid, A. (2018). Vision dominates in perceptual language: <span>English</span> sensory vocabulary is optimized for usage. <em>Cognition</em>, <em>179</em>, 213–220. <a href="https://doi.org/10.1016/j.cognition.2018.05.008">https://doi.org/10.1016/j.cognition.2018.05.008</a>
