--- a/index.html
+++ b/index.html
@@ -1774,7 +1774,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97unm/wiki/home/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97unm" target="_blank" rel="noopener">
   Code
 </a>
 
@@ -1783,7 +1783,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97unm/wiki/home/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97unm" target="_blank" rel="noopener">
   Dataset
 </a>
 
