--- a/publication/bernabeu-etal-2017/index.html
+++ b/publication/bernabeu-etal-2017/index.html
@@ -672,7 +672,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/97unm/wiki/home/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/97unm" target="_blank" rel="noopener">
   Code
 </a>
 
@@ -681,7 +681,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/97unm/wiki/home/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://osf.io/97unm" target="_blank" rel="noopener">
   Dataset
 </a>
 
