--- a/publication/index.html
+++ b/publication/index.html
@@ -1263,7 +1263,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97unm/wiki/home/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97unm" target="_blank" rel="noopener">
   Code
 </a>
 
@@ -1272,7 +1272,7 @@
   
     
   
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97unm/wiki/home/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://osf.io/97unm" target="_blank" rel="noopener">
   Dataset
 </a>
 
