--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.17605/OSF.IO/UERYQ" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.17605/OSF.IO/UERYQ" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -930,7 +930,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.17635/lancaster/thesis/1795" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.17635/lancaster/thesis/1795" target="_blank" rel="noopener">
   DOI
 </a>
 
