--- a/publication/index.html
+++ b/publication/index.html
@@ -707,7 +707,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.17605/OSF.IO/UERYQ" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.17605/OSF.IO/UERYQ" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -802,7 +802,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.17635/lancaster/thesis/1795" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.17635/lancaster/thesis/1795" target="_blank" rel="noopener">
   DOI
 </a>
 
