--- a/publication/language-vision-conceptual-processing/index.html
+++ b/publication/language-vision-conceptual-processing/index.html
@@ -683,7 +683,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/https://doi.org/10.17605/OSF.IO/UERYQ" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.17605/OSF.IO/UERYQ" target="_blank" rel="noopener">
   DOI
 </a>
 
