--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -683,7 +683,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/https://doi.org/10.17635/lancaster/thesis/1795" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.17635/lancaster/thesis/1795" target="_blank" rel="noopener">
   DOI
 </a>
 
