--- a/applications-and-dashboards/experimental-data-simulation/index.html
+++ b/applications-and-dashboards/experimental-data-simulation/index.html
@@ -744,7 +744,7 @@ install_version(&#39;tidyr&#39;, &#39;1.1.2&#39;, &#39;http://cran.us.r-project.
 </div>
 <div id="contact" class="section level3">
 <h3>Contact</h3>
-<p>To submit any questions or feedback, please post <a href="https://github.com/pablobernabeu/Experimental-data-simulation/issues">an issue</a>, or email Pablo Bernabeu at <a href="mailto:p.bernabeu@lancaster.ac.uk">p.bernabeu@lancaster.ac.uk</a>.</p>
+<p>To submit any questions or feedback, please post <a href="https://github.com/pablobernabeu/Experimental-data-simulation/issues">an issue</a>, or email Pablo Bernabeu at <a href="mailto:pcbernabeu@gmail.com">pcbernabeu@gmail.com</a>.</p>
 <p><br></p>
 </div>
 
