--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -644,7 +644,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://eprints.lancs.ac.uk/id/eprint/177833/" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://eprints.lancs.ac.uk/id/eprint/177833/6/2022deJuanBernabeuPhD.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -724,7 +724,7 @@
     
 
     
-    <a href=https://eprints.lancs.ac.uk/id/eprint/177833/>
+    <a href=https://eprints.lancs.ac.uk/id/eprint/177833/6/2022deJuanBernabeuPhD.pdf>
       <button style = "background-color: white; color: black; border: 2px solid #4CAF50; border-radius: 12px;">
       <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;"> 
       Open full text
