--- a/index.html
+++ b/index.html
@@ -4109,7 +4109,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/2023/how-to-break-up-colour-variable-in-sjplot-into-equally-sized-bins/" >How to break up colour variable in sjPlot into equally-sized bins</a>
+      <a href="/2023/how-to-break-down-colour-variable-in-sjplot-plot-model-into-equally-sized-bins/" >How to break down colour variable in sjPlot::plot_model into equally-sized bins</a>
     </h3>
 
     
