--- a/index.html
+++ b/index.html
@@ -4114,7 +4114,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 
     
     <div class="article-style">
-      The R package simr has greatly facilitated power analysis for mixed-effects models using Monte Carlo simulation (i.e., hundreds or …
+      The R package ‘simr’ has greatly facilitated power analysis for mixed-effects models using Monte Carlo simulation (i.e., hundreds or …
     </div>
     
 
