--- a/index.html
+++ b/index.html
@@ -4109,12 +4109,12 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/2023/ggplotting-power-curves-from-simr-package/" >ggplotting power curves from simr package</a>
+      <a href="/2023/ggplotting-power-curves-from-simr-package/" >ggplotting power curves from the &#39;simr&#39; package</a>
     </h3>
 
     
     <div class="article-style">
-      The R package ‘simr’ has greatly facilitated power analysis for mixed-effects models using Monte Carlo simulation (i.e., hundreds or …
+      The R package ‘simr’ has greatly facilitated power analysis for mixed-effects models using Monte Carlo simulation (which involves …
     </div>
     
 
