--- a/applications-and-dashboards/vtt-transcription-app/index.html
+++ b/applications-and-dashboards/vtt-transcription-app/index.html
@@ -660,8 +660,7 @@
 <div id="globe_with_meridians-the-web-application-can-be-launched-here." class="section level2">
 <h2>🌐  The web application can be <a href="https://pablo-bernabeu.shinyapps.io/VTT-Transcription-App/">launched here</a>.</h2>
 <p>The data is only available to the user, and is deleted when the website is closed.</p>
-<p>Questions and suggestions can be submitted as <a href="https://github.com/pablobernabeu/VTT-transcription/issues">issues</a> or emailed to <a href="mailto:pcbernabeu@gmail.com" class="email">pcbernabeu@gmail.com</a>. The app can be extended via pull requests.</p>
-<p>Developer: Pablo Bernabeu (Dept. Psychology, Lancaster University). Licence: <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p>
+<p>The <a href="https://github.com/pablobernabeu/VTT-transcription">source code is available on Github</a>, where the app can be extended via pull requests. Questions and suggestions can be submitted as <a href="https://github.com/pablobernabeu/VTT-transcription/issues">issues</a> or emailed to <a href="mailto:pcbernabeu@gmail.com" class="email">pcbernabeu@gmail.com</a>. The licence is <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.</p>
 </div>
 <div id="code-details" class="section level2">
 <h2>Code details</h2>
