--- a/publication/index.html
+++ b/publication/index.html
@@ -1002,6 +1002,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.17605/OSF.IO/NP6HY" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
