--- a/publication/the-interplay-between-linguistic-and-embodied-systems-in-conceptual-processing/index.html
+++ b/publication/the-interplay-between-linguistic-and-embodied-systems-in-conceptual-processing/index.html
@@ -667,6 +667,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.17605/OSF.IO/NP6HY" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
