--- a/publication/index.html
+++ b/publication/index.html
@@ -1183,6 +1183,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/s2c5h" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
   
   
@@ -1469,6 +1473,10 @@
 
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/10.31234/osf.io/5gjvk" target="_blank" rel="noopener">
+  DOI
+</a>
 
 
   
