--- a/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
+++ b/publication/dutch-modality-exclusivity-norms-for-336-properties-and-411-concepts/index.html
@@ -695,6 +695,10 @@
 
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/10.31234/osf.io/s2c5h" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
   
   
