--- a/publication/index.html
+++ b/publication/index.html
@@ -926,7 +926,7 @@
   
   <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/thesis" >
     
-    Online book format
+    Online book
   </a>
 
 </p>
