--- a/publication/pablo-bernabeu-2022-phd-thesis/index.html
+++ b/publication/pablo-bernabeu-2022-phd-thesis/index.html
@@ -704,7 +704,7 @@
   
   <a class="btn btn-outline-primary my-1 mr-1" href="/thesis" >
     
-    Online book format
+    Online book
   </a>
 
 
@@ -736,7 +736,7 @@
 <a href='/thesis'>
 <button style = "background-color: white; color: black; border: 2px solid #DF2E2E; border-radius: 12px;">
 <h3 style = "margin-top: 7px !important; margin-left: 9px !important; margin-right: 9px !important;">
-<span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Online book format </h3></button>
+<span style="color:#DBE6DA;"><i class="fas fa-mouse-pointer"></i></span>&nbsp; Online book </h3></button>
 </a>
 <br>
 <br>
