--- a/talk/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web/index.html
+++ b/talk/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web/index.html
@@ -640,7 +640,6 @@
 
     <div class="article-style">
       
-<script src="https://pablobernabeu.github.io/talk/2020-10-08-reproducibilidad-en-torno-a-una-aplicacion-web/index_files/header-attrs/header-attrs.js"></script>
 
 
 <div id="resumen" class="section level3">
@@ -651,10 +650,10 @@
 <h3>Vídeo y filminas</h3>
 <iframe width="560" height="315" style="margin-top:20px; margin-bottom:5px;" src="https://www.youtube-nocookie.com/embed/1njLOAWqLPM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/AlE6wv2USddNP6" width="560" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-top:20px; border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
+<iframe src="https://www.slideshare.net/slideshow/embed_code/key/AlE6wv2USddNP6" width="560" height="355" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-top:20px; border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
 </iframe>
 <div style="font-size:85%; margin-bottom:5px">
-<a href="//www.slideshare.net/PabloBernabeu/resumido-reprohack-es-prestt" title="Reproducibilidad entorno a una aplicación web" target="_blank">Slideshare</a>
+<a href="https://www.slideshare.net/PabloBernabeu/resumido-reprohack-es-prestt" title="Reproducibilidad entorno a una aplicación web" target="_blank">Slideshare</a>
 </div>
 <p><br></p>
 </div>
