--- a/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/index.html
+++ b/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/index.html
@@ -661,14 +661,13 @@ AbstractResearch in conceptual processing has suggested that the comprehension 
 
     <div class="article-style">
       
-<script src="https://pablobernabeu.github.io/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/index_files/header-attrs/header-attrs.js"></script>
 <script src="https://pablobernabeu.github.io/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/index_files/fitvids/fitvids.min.js"></script>
 
 
 <p>       <a href="https://www.youtube.com/watch?v=y2bopgYWYvE&amp;ab_channel=LancasterPsychology"><strong>Video</strong></a></p>
 <p>       <a href="/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides"><strong>Slides</strong></a></p>
 <p><br></p>
-<div class="shareagain" style="min-width:300px;margin:1em auto;">
+<div class="shareagain" style="min-width:300px;margin:1em auto;" data-exeternal="1">
 <iframe src="/talk/linguistic-and-embodied-systems-in-conceptual-processing-variation-across-individuals-and-items/slides" width="400" height="300" style="border:2px solid currentColor;" loading="lazy" allowfullscreen></iframe>
 <script>fitvids('.shareagain', {players: 'iframe'});</script>
 </div>
