--- a/index.html
+++ b/index.html
@@ -4100,8 +4100,8 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
-    <h1>Blog</h1>
-    <p>Blog posts and friends. Some of the <a href="/categories/r/">posts involving R code</a> have been republished on <a href="https://www.r-bloggers.com">R-bloggers</a>, <a href="https://rweekly.org/">R Weekly</a>, <a href="https://www.datasciencecentral.com/">Data Science Central</a> and <a href="https://dev.to/">dev.to</a>. Some other posts were republished on <a href="https://mappingignorance.org">Mapping Ignorance</a>.</p>
+    <h1>Blog &amp; co.</h1>
+    <p>Some of the <a href="/categories/r/">posts involving R code</a> have been republished on <a href="https://www.r-bloggers.com">R-bloggers</a>, <a href="https://rweekly.org/">R Weekly</a>, <a href="https://www.datasciencecentral.com/">Data Science Central</a> and <a href="https://dev.to/">dev.to</a>. Some other posts were republished on <a href="https://mappingignorance.org">Mapping Ignorance</a>.</p>
   </div>
   <div class="col-12 col-lg-8">
 
@@ -7735,7 +7735,7 @@ My stimuli comprise two kinds of sentences …
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="https://www.researchgate.net/post/Conceptual-modality-switch-effect-measured-at-first-word" target="_blank" rel="noopener">Conceptual-modality-switch-effect-measured-at-first-word</a>
+      <a href="https://www.researchgate.net/post/Conceptual-modality-switch-effect-measured-at-first-word" target="_blank" rel="noopener">Conceptual modality switch effect measured at first word?</a>
     </h3>
 
     
