--- a/index.html
+++ b/index.html
@@ -2990,6 +2990,12 @@
 </thead>
 <tbody>
 <tr>
+<td>Oct 2023</td>
+<td>Talk</td>
+<td>Study in preparation (information and slides available upon request while study in progress)</td>
+<td>AcqVA Aurora Centre, UiT The Arctic University of Norway</td>
+</tr>
+<tr>
 <td>May 2023</td>
 <td>Reading group discussion</td>
 <td><a href="/talk/discussion-of-labotka-et-al-2023">Discussion of Labotka et al. (2023): Testing the effects of congruence in adult multilingual acquisition with implications for creole genesis</a></td>
@@ -3734,7 +3740,7 @@
 </tr>
 <tr>
 <td>2016</td>
-<td>Funding for experiment from <a href="https://www.mpi.nl/department/neurobiology-language/4">Neurobiology of Language Dept., Max Planck Institute for Psycholinguistics Psycholinguistics</a></td>
+<td>Funding for experiment from <a href="https://www.mpi.nl/department/neurobiology-language/4">Neurobiology of Language Dept., Max Planck Institute for Psycholinguistics</a></td>
 <td>Conducting an EEG experiment for my <a href="https://psyarxiv.com/5gjvk/">master's thesis</a>.</td>
 </tr>
 </tbody>
