--- a/index.html
+++ b/index.html
@@ -4306,7 +4306,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="https://forum.cogsci.nl/discussion/8929/two-second-delay-after-logger#latest" target="_self" rel="noopener">Two-second delay after logger</a>
+      <a href="https://forum.cogsci.nl/discussion/8929/two-second-delay-after-logger" target="_self" rel="noopener">Two-second delay after logger</a>
     </h3>
 
     
