--- a/index.html
+++ b/index.html
@@ -2381,8 +2381,8 @@
 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
-    <h1>Web applications and dashboards  <span style='font-size:60%;' data-toggle='tooltip1' data-placement='bottom' title=' &nbsp; Article: The case for data dashboards &nbsp; '><a href='/2017/the-case-for-data-dashboards-first-steps-in-r-shiny/'><i class='fas fa-info-circle fa-2xs' style='color:#ADADAD'></i></a></span></h1>
-    <p>Articles republished on <a href="https://www.r-bloggers.com">R-bloggers</a></p>
+    <h1>Web applications and dashboards  <span style='font-size:60%;' data-toggle='tooltip1' data-placement='bottom' title=' &nbsp; Article: The case for data dashboards &nbsp; '><a href='/2017/the-case-for-data-dashboards-first-steps-in-r-shiny/'><i class='fas fa-info-circle fa-2xs' style='color:#D4D4D4'></i></a></span></h1>
+    <p><span style='font-size:80%;'>Articles republished on <a href="https://www.r-bloggers.com">R-bloggers</a></span></p>
   </div>
   <div class="col-12 col-lg-8">
 
@@ -2893,7 +2893,7 @@
   
     <div class="col-12 col-lg-4 section-heading">
       <h1>Workshops</h1>
-      <p>Introduction to R, statistics, visualisation, reproducible documents, web applications and dashboards, HTML, CSS, web hosting (<a href="/2020/data-is-present-workshops-and-datathons/">further details</a>).</p>
+      <p><span style='font-size:80%;'>Introduction to R, statistics, visualisation, reproducible documents, web applications and dashboards, HTML, CSS, web hosting (<a href="/2020/data-is-present-workshops-and-datathons/">further details</a>).</span></p>
     </div>
     <div class="col-12 col-lg-8">
       <table>
@@ -4107,7 +4107,7 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Blog and resources</h1>
-    <p>Some of the <a href="/categories/r/">posts involving R code</a> were republished on <a href="https://www.r-bloggers.com">R-bloggers</a>, <a href="https://rweekly.org/">R Weekly</a>, <a href="https://www.datasciencecentral.com/">Data Science Central</a> and <a href="https://dev.to/">dev.to</a>. Some other posts were republished on <a href="https://mappingignorance.org">Mapping Ignorance</a>.</p>
+    <p><span style='font-size:80%;'>Some of the <a href="/categories/r/">posts involving R code</a> were republished on <a href="https://www.r-bloggers.com">R-bloggers</a>, <a href="https://rweekly.org/">R Weekly</a>, <a href="https://www.datasciencecentral.com/">Data Science Central</a> and <a href="https://dev.to/">dev.to</a>.</span></p>
   </div>
   <div class="col-12 col-lg-8">
 
