--- a/applications-and-dashboards/bernabeu-2018-modalitynorms/index.html
+++ b/applications-and-dashboards/bernabeu-2018-modalitynorms/index.html
@@ -886,7 +886,7 @@ $(document).ready(function(){
 <br>
 <h2 id="reference">Reference</h2>
 <div style = "text-indent:-2em; margin-left:2em;">
-<p>Bernabeu, P. (2018). Dutch modality exclusivity norms for 336 properties and 411 concepts [Web application]. Retrieved from <a href="https://pablobernabeu.shinyapps.io/Dutch-Modality-Exclusivity-Norms/">https://pablobernabeu.shinyapps.io/Dutch-Modality-Exclusivity-Norms/</a>.</p>
+<p>Bernabeu, P. (2018). Dutch modality exclusivity norms for 336 properties and 411 concepts [Web application]. Retrieved from <a href="https://pablobernabeu.shinyapps.io/Dutch-Modality-Exclusivity-Norms">https://pablobernabeu.shinyapps.io/Dutch-Modality-Exclusivity-Norms</a></p>
 </div>
 <br>
 
