--- a/applications-and-dashboards/bernabeu-etal-2017-modalityswitch/index.html
+++ b/applications-and-dashboards/bernabeu-etal-2017-modalityswitch/index.html
@@ -821,7 +821,7 @@ downloadButton('downloadPlot.1', 'Download HD plot')
 </code></pre>
 <h3 id="reference">Reference</h3>
 <div style = "text-indent:-2em; margin-left:2em;">
-<p>Bernabeu, P., Willems, R. M., &amp; Louwerse, M. M. (2017). Modality switch effects emerge early and increase throughout conceptual processing: Evidence from ERPs [Web application]. Retrieved from <a href="https://pablobernabeu.shinyapps.io/ERP-waveform-visualization_CMS-experiment/">https://pablobernabeu.shinyapps.io/ERP-waveform-visualization_CMS-experiment/</a>.</p>
+<p>Bernabeu, P., Willems, R. M., &amp; Louwerse, M. M. (2017). Modality switch effects emerge early and increase throughout conceptual processing: Evidence from ERPs [Web application]. Retrieved from <a href="https://pablobernabeu.shinyapps.io/ERP-waveform-visualization_CMS-experiment">https://pablobernabeu.shinyapps.io/ERP-waveform-visualization_CMS-experiment</a></p>
 </div>
 
     </div>
