--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -726,6 +726,8 @@
 <h4 id="nbsp-i-classfas-fa-eyeinbsp-a-hrefhttpsosfioh36wrvideo-demonstration-of-the-procedure-followed-in-our-laba">  <i class="fas fa-eye"></i>  <a href='https://osf.io/h36wr/'>Video demonstration of the procedure followed in our lab</a></h4>
 <h4 id="nbsp-i-classfa-fa-databaseinbsp-a-hrefhttpsosfiowaf48data-from-our-laba">  <i class="fa fa-database"></i>  <a href='https://osf.io/waf48/'>Data from our lab</a></h4>
 <br>
+<p>By contributing to this replication study at the beginning of my PhD, it turned out I followed a <a href="https://doi.org/10.1017/S0140525X18000730"><strong>rule</strong></a>!</p>
+<br>
 <h4 id="reference">Reference</h4>
 <div style = "text-indent:-2em; margin-left:2em;">
 <p>Chen, S.-C., Buchanan, E. M., Kekecs, Z., Miller, J. K., Szabelska, A., Aczel, B., Bernabeu, P., Forscher, P. S., Szuts, A., Vally, D. Z., Al-Hoorie, A. H., Helmy, M., Silva, C. S. A. da, Silva, L. O. da, Moraes, Y. L. de, Hsu, R. M. C. S., Mafra, A. L., Valentova, J. V., Varella, M. A. C., … Chartier, C. R. (2023). <em>Investigating object orientation effects across 18 languages</em>. OSF Preprints. <a href="https://doi.org/10.31219/osf.io/2qf6w">https://doi.org/10.31219/osf.io/2qf6w</a></p>
