--- a/index.html
+++ b/index.html
@@ -2381,7 +2381,7 @@
 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
-    <h1>Web applications and dashboards  <span style='font-size:60%;' data-toggle='tooltip1' data-placement='bottom' title=' &nbsp; Article: The case for data dashboards &nbsp; '><a href='/2017/the-case-for-data-dashboards-first-steps-in-r-shiny/'><i class='fas fa-info-circle fa-2xs' style='color:#D4D4D4'></i></a></span></h1>
+    <h1>Web applications and dashboards  <span style='font-size:60%;' data-toggle='tooltip1' data-placement='bottom' title=' &nbsp; Article: The case for data dashboards &nbsp; '><a href='/2017/the-case-for-data-dashboards-first-steps-in-r-shiny/'><i class='fas fa-info-circle fa-2xs' style='color:lightgrey;'></i></a></span></h1>
     <p><span style='font-size:80%;'>Articles republished on <a href="https://www.r-bloggers.com">R-bloggers</a></span></p>
   </div>
   <div class="col-12 col-lg-8">
