--- a/index.html
+++ b/index.html
@@ -4013,36 +4013,37 @@ style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 style = "position:absolute; top:0; left:0; width:80%; height:80%;"></iframe>
 </div>
 <h3 id="span-stylecolorgrey-font-size702019-spannbsp-demonstration-of-procedure-for-psa-experimentspublicationchen-etal-inprep"><span style='color:grey; font-size:70%;'>2019 ·</span>  Demonstration of procedure for <a href="/publication/chen-etal-inprep/">PSA experiments</a></h3>
-<div style = "margin-top: 20px;">
-  <style>
-      .embed-responsive {
-          position:relative;
-          height:100%;
-      }
-      .embed-responsive iframe {
-          position:absolute;
-          height:100%;
-      }
-  </style>
-  <link href="https://mfr.osf.io/static/css/mfr.css" media="all" rel="stylesheet">
-  <div id="mfrIframe" class="mfr mfr-file"></div>
-  <script src="https://mfr.osf.io/static/js/mfr.js"></script>
-  <script>
-      function renderMfr() {
-          var mfrRender = new mfr.Render("mfrIframe", "https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render");
-      }
-      if (window.$) {
-          renderMfr();
-      } else {
-          var jq = document.createElement('script');
-          document.head.appendChild(jq);
-          jq.onload = function() {
-              renderMfr();
-          }
-          jq.src = 'http://code.jquery.com/jquery-1.11.2.min.js';
-      }
-  </script>
-</div>
+<style>
+    .embed-responsive {
+        position:relative;
+        width:640px;
+        height:300px;
+    }
+    .embed-responsive iframe {
+        position:absolute;
+        width:640px;
+        height:300px;
+        margin-top: 12px;
+    }
+</style>
+<link href="https://mfr.osf.io/static/css/mfr.css" media="all" rel="stylesheet">
+<div id="mfrIframe" class="mfr mfr-file"></div>
+<script src="https://mfr.osf.io/static/js/mfr.js"></script>
+<script>
+    function renderMfr() {
+        var mfrRender = new mfr.Render("mfrIframe", "https://mfr.de-1.osf.io/render?url=https://osf.io/download/h36wr/?direct%26mode=render");
+    }
+    if (window.$) {
+        renderMfr();
+    } else {
+        var jq = document.createElement('script');
+        document.head.appendChild(jq);
+        jq.onload = function() {
+            renderMfr();
+        }
+        jq.src = 'http://code.jquery.com/jquery-1.11.2.min.js';
+    }
+</script>
 
     </div>
   
