--- a/publication/chen-etal-inprep/index.html
+++ b/publication/chen-etal-inprep/index.html
@@ -727,11 +727,14 @@
 <style>
     .embed-responsive {
         position:relative;
-        height:100%;
+        width:640px;
+        height:300px;
     }
     .embed-responsive iframe {
         position:absolute;
-        height:100%;
+        width:640px;
+        height:300px;
+        margin-top: 12px;
     }
 </style>
 <link href="https://mfr.osf.io/static/css/mfr.css" media="all" rel="stylesheet">
